# Otus_hw

./: README.md  requirements.txt
.github/workflows/: run_tests.yml
homework_01/: main.py
homework_02/: __init__.py  base.py  car.py  engine.py  plane.py
homework_03/: Dockerfile  README.md  main.py  pyproject.toml
homework_04/: jsonplaceholder_requests.py  main.py  models.py
homework_05/: app.py  pyproject.toml
homework_05/static/: about_style.css
homework_05/templates/: about.html  base.html  index.html
testing/test_homework_02/: conftest.py  test_base.py
