[tool.poetry]
name = "homework_03"
version = "0.1.0"
description = ""
authors = ["Dmitry <davydkin.dmitry@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
